@@ -13,10 +13,7 @@ import org.elasticsearch.Version;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.compress.CompressedXContent;
 import org.elasticsearch.common.lucene.Lucene;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentHelper;
-import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.index.analysis.AnalyzerScope;
 import org.elasticsearch.index.analysis.IndexAnalyzers;
 import org.elasticsearch.index.analysis.NamedAnalyzer;
@@ -25,10 +22,14 @@ import org.elasticsearch.plugins.MapperPlugin;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.script.ScriptCompiler;
 import org.elasticsearch.test.VersionUtils;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.json.JsonXContent;
 
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -39,6 +40,12 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class ParametrizedMapperTests extends MapperServiceTestCase {
+
+    public enum DummyEnumType {
+        name1,
+        name2,
+        name3
+    }
 
     public static class TestPlugin extends Plugin implements MapperPlugin {
         @Override
@@ -79,66 +86,97 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
     public static class Builder extends FieldMapper.Builder {
 
-        final Parameter<Boolean> fixed
-            = Parameter.boolParam("fixed", false, m -> toType(m).fixed, true);
-        final Parameter<Boolean> fixed2
-            = Parameter.boolParam("fixed2", false, m -> toType(m).fixed2, false)
+        final Parameter<Boolean> fixed = Parameter.boolParam("fixed", false, m -> toType(m).fixed, true);
+        final Parameter<Boolean> fixed2 = Parameter.boolParam("fixed2", false, m -> toType(m).fixed2, false)
             .addDeprecatedName("fixed2_old");
-        final Parameter<String> variable
-            = Parameter.stringParam("variable", true, m -> toType(m).variable, "default").acceptsNull();
-        final Parameter<StringWrapper> wrapper
-            = new Parameter<>("wrapper", false, () -> new StringWrapper("default"),
-            (n, c, o) -> {
-                if (o == null) return null;
-                return new StringWrapper(o.toString());
-                },
-            m -> toType(m).wrapper).setSerializer((b, n, v) -> b.field(n, v.name), v -> "wrapper_" + v.name);
-        final Parameter<Integer> intValue = Parameter.intParam("int_value", true, m -> toType(m).intValue, 5)
-            .setValidator(n -> {
-                if (n > 50) {
-                    throw new IllegalArgumentException("Value of [n] cannot be greater than 50");
-                }
-            })
-            .setMergeValidator((o, n, c) -> n >= o);
-        final Parameter<NamedAnalyzer> analyzer
-            = Parameter.analyzerParam("analyzer", false, m -> toType(m).analyzer, () -> Lucene.KEYWORD_ANALYZER);
-        final Parameter<NamedAnalyzer> searchAnalyzer
-            = Parameter.analyzerParam("search_analyzer", true, m -> toType(m).searchAnalyzer, analyzer::getValue);
+        final Parameter<String> variable = Parameter.stringParam("variable", true, m -> toType(m).variable, "default").acceptsNull();
+        final Parameter<StringWrapper> wrapper = new Parameter<>("wrapper", false, () -> new StringWrapper("default"), (n, c, o) -> {
+            if (o == null) return null;
+            return new StringWrapper(o.toString());
+        }, m -> toType(m).wrapper).setSerializer((b, n, v) -> b.field(n, v.name), v -> "wrapper_" + v.name);
+        final Parameter<Integer> intValue = Parameter.intParam("int_value", true, m -> toType(m).intValue, 5).addValidator(n -> {
+            if (n > 50) {
+                throw new IllegalArgumentException("Value of [n] cannot be greater than 50");
+            }
+        }).addValidator(n -> {
+            if (n < 0) {
+                throw new IllegalArgumentException("Value of [n] cannot be less than 0");
+            }
+        }).setMergeValidator((o, n, c) -> n >= o);
+        final Parameter<NamedAnalyzer> analyzer = Parameter.analyzerParam(
+            "analyzer",
+            false,
+            m -> toType(m).analyzer,
+            () -> Lucene.KEYWORD_ANALYZER
+        );
+        final Parameter<NamedAnalyzer> searchAnalyzer = Parameter.analyzerParam(
+            "search_analyzer",
+            true,
+            m -> toType(m).searchAnalyzer,
+            analyzer::getValue
+        );
         final Parameter<Boolean> index = Parameter.boolParam("index", false, m -> toType(m).index, true);
-        final Parameter<String> required = Parameter.stringParam("required", true, m -> toType(m).required, null)
-            .setValidator(value -> {
-                if (value == null) {
-                    throw new IllegalArgumentException("field [required] must be specified");
-                }
-            });
-        final Parameter<String> restricted
-            = Parameter.restrictedStringParam("restricted", true, m -> toType(m).restricted, "foo", "bar");
+        final Parameter<String> required = Parameter.stringParam("required", true, m -> toType(m).required, null).addValidator(value -> {
+            if (value == null) {
+                throw new IllegalArgumentException("field [required] must be specified");
+            }
+        });
+        final Parameter<String> restricted = Parameter.restrictedStringParam("restricted", true, m -> toType(m).restricted, "foo", "bar");
+
+        final Parameter<DummyEnumType> enumField = Parameter.enumParam(
+            "enum_field",
+            true,
+            m -> toType(m).enumField,
+            DummyEnumType.name1,
+            DummyEnumType.class
+        );
+
+        final Parameter<DummyEnumType> restrictedEnumField = Parameter.restrictedEnumParam(
+            "restricted_enum_field",
+            true,
+            m -> toType(m).restrictedEnumField,
+            DummyEnumType.name1,
+            DummyEnumType.class,
+            EnumSet.of(DummyEnumType.name1, DummyEnumType.name2)
+        );
 
         protected Builder(String name) {
             super(name);
             // only output search analyzer if different to analyzer
             searchAnalyzer.setSerializerCheck(
-                (id, ic, v) -> Objects.equals(analyzer.getValue().name(), searchAnalyzer.getValue().name()) == false);
+                (id, ic, v) -> Objects.equals(analyzer.getValue().name(), searchAnalyzer.getValue().name()) == false
+            );
         }
 
         @Override
         protected List<Parameter<?>> getParameters() {
-            return List.of(fixed, fixed2, variable, index, wrapper, intValue, analyzer, searchAnalyzer, required, restricted);
+            return List.of(
+                fixed,
+                fixed2,
+                variable,
+                index,
+                wrapper,
+                intValue,
+                analyzer,
+                searchAnalyzer,
+                required,
+                restricted,
+                enumField,
+                restrictedEnumField
+            );
         }
 
         @Override
-        public FieldMapper build(ContentPath contentPath) {
-            return new TestMapper(name(), buildFullName(contentPath),
-                multiFieldsBuilder.build(this, contentPath), copyTo.build(), this);
+        public FieldMapper build(MapperBuilderContext context) {
+            return new TestMapper(name(), context.buildFullName(name), multiFieldsBuilder.build(this, context), copyTo.build(), this);
         }
     }
 
     public static class TypeParser implements Mapper.TypeParser {
 
         @Override
-        public Mapper.Builder parse(String name,
-                                    Map<String, Object> node,
-                                    MappingParserContext parserContext) throws MapperParsingException {
+        public Mapper.Builder parse(String name, Map<String, Object> node, MappingParserContext parserContext)
+            throws MapperParsingException {
             Builder builder = new Builder(name);
             builder.parse(name, parserContext, node);
             return builder;
@@ -157,9 +195,16 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         private final boolean index;
         private final String required;
         private final String restricted;
+        private final DummyEnumType enumField;
+        private final DummyEnumType restrictedEnumField;
 
-        protected TestMapper(String simpleName, String fullName, MultiFields multiFields, CopyTo copyTo,
-                             ParametrizedMapperTests.Builder builder) {
+        protected TestMapper(
+            String simpleName,
+            String fullName,
+            MultiFields multiFields,
+            CopyTo copyTo,
+            ParametrizedMapperTests.Builder builder
+        ) {
             super(simpleName, new KeywordFieldMapper.KeywordFieldType(fullName), multiFields, copyTo);
             this.fixed = builder.fixed.getValue();
             this.fixed2 = builder.fixed2.getValue();
@@ -171,6 +216,8 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
             this.index = builder.index.getValue();
             this.required = builder.required.getValue();
             this.restricted = builder.restricted.getValue();
+            this.enumField = builder.enumField.getValue();
+            this.restrictedEnumField = builder.restrictedEnumField.getValue();
         }
 
         @Override
@@ -192,10 +239,17 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
     private static TestMapper fromMapping(String mapping, Version version, boolean fromDynamicTemplate) {
         MapperService mapperService = mock(MapperService.class);
         IndexAnalyzers indexAnalyzers = new IndexAnalyzers(
-            Map.of("_standard", Lucene.STANDARD_ANALYZER,
-                "_keyword", Lucene.KEYWORD_ANALYZER,
-                "default", new NamedAnalyzer("default", AnalyzerScope.INDEX, new StandardAnalyzer())),
-            Collections.emptyMap(), Collections.emptyMap());
+            Map.of(
+                "_standard",
+                Lucene.STANDARD_ANALYZER,
+                "_keyword",
+                Lucene.KEYWORD_ANALYZER,
+                "default",
+                new NamedAnalyzer("default", AnalyzerScope.INDEX, new StandardAnalyzer())
+            ),
+            Collections.emptyMap(),
+            Collections.emptyMap()
+        );
         when(mapperService.getIndexAnalyzers()).thenReturn(indexAnalyzers);
         MappingParserContext pc = new MappingParserContext(s -> null, s -> {
             if (Objects.equals("keyword", s)) {
@@ -205,16 +259,21 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
                 return BinaryFieldMapper.PARSER;
             }
             return null;
-        }, name -> null, version, () -> null, null, ScriptCompiler.NONE,
-            mapperService.getIndexAnalyzers(), mapperService.getIndexSettings(), () -> {
-            throw new UnsupportedOperationException();
-        });
+        },
+            name -> null,
+            version,
+            () -> null,
+            null,
+            ScriptCompiler.NONE,
+            mapperService.getIndexAnalyzers(),
+            mapperService.getIndexSettings(),
+            IdFieldMapper.NO_FIELD_DATA
+        );
         if (fromDynamicTemplate) {
             pc = new MappingParserContext.DynamicTemplateParserContext(pc);
         }
-        return (TestMapper) new TypeParser()
-            .parse("field", XContentHelper.convertToMap(JsonXContent.jsonXContent, mapping, true), pc)
-            .build(new ContentPath());
+        return (TestMapper) new TypeParser().parse("field", XContentHelper.convertToMap(JsonXContent.jsonXContent, mapping, true), pc)
+            .build(MapperBuilderContext.ROOT);
     }
 
     private static TestMapper fromMapping(String mapping, Version version) {
@@ -245,11 +304,14 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));
 
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":true," +
-                "\"fixed2\":false,\"variable\":\"default\",\"index\":true," +
-                "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"_keyword\"," +
-                "\"required\":\"value\",\"restricted\":\"foo\"}}",
-            toStringWithDefaults(mapper));
+        assertEquals(
+            "{\"field\":{\"type\":\"test_mapper\",\"fixed\":true,"
+                + "\"fixed2\":false,\"variable\":\"default\",\"index\":true,"
+                + "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"_keyword\","
+                + "\"required\":\"value\",\"restricted\":\"foo\",\"enum_field\":\"name1\","
+                + "\"restricted_enum_field\":\"name1\"}}",
+            toStringWithDefaults(mapper)
+        );
     }
 
     // merging - try updating 'fixed' and 'fixed2' should get an error, try updating 'variable' and verify update
@@ -260,9 +322,9 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         TestMapper badMerge = fromMapping("{\"type\":\"test_mapper\",\"fixed\":true,\"fixed2\":true,\"required\":\"value\"}");
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> mapper.merge(badMerge));
-        String expectedError = "Mapper for [field] conflicts with existing mapper:\n" +
-            "\tCannot update parameter [fixed] from [false] to [true]\n" +
-            "\tCannot update parameter [fixed2] from [false] to [true]";
+        String expectedError = "Mapper for [field] conflicts with existing mapper:\n"
+            + "\tCannot update parameter [fixed] from [false] to [true]\n"
+            + "\tCannot update parameter [fixed2] from [false] to [true]";
         assertEquals(expectedError, e.getMessage());
 
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));   // original mapping is unaffected
@@ -272,26 +334,31 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         TestMapper merged = (TestMapper) mapper.merge(goodMerge);
 
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));   // original mapping is unaffected
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":false,\"variable\":\"updated\",\"required\":\"value\"}}",
-            Strings.toString(merged));
+        assertEquals(
+            "{\"field\":{\"type\":\"test_mapper\",\"fixed\":false,\"variable\":\"updated\",\"required\":\"value\"}}",
+            Strings.toString(merged)
+        );
     }
 
     // add multifield, verify, add second multifield, verify, overwrite second multifield
     public void testMultifields() {
-        String mapping = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," +
-            "\"fields\":{\"sub\":{\"type\":\"keyword\"}}}";
+        String mapping = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\","
+            + "\"fields\":{\"sub\":{\"type\":\"keyword\"}}}";
         TestMapper mapper = fromMapping(mapping);
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));
 
-        String addSubField = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"" +
-            ",\"fields\":{\"sub2\":{\"type\":\"keyword\"}}}";
+        String addSubField = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\""
+            + ",\"fields\":{\"sub2\":{\"type\":\"keyword\"}}}";
         TestMapper toMerge = fromMapping(addSubField);
         TestMapper merged = (TestMapper) mapper.merge(toMerge);
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," +
-            "\"fields\":{\"sub\":{\"type\":\"keyword\"},\"sub2\":{\"type\":\"keyword\"}}}}", Strings.toString(merged));
+        assertEquals(
+            "{\"field\":{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\","
+                + "\"fields\":{\"sub\":{\"type\":\"keyword\"},\"sub2\":{\"type\":\"keyword\"}}}}",
+            Strings.toString(merged)
+        );
 
-        String badSubField = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\"," +
-            "\"fields\":{\"sub2\":{\"type\":\"binary\"}}}";
+        String badSubField = "{\"type\":\"test_mapper\",\"variable\":\"foo\",\"required\":\"value\","
+            + "\"fields\":{\"sub2\":{\"type\":\"binary\"}}}";
         TestMapper badToMerge = fromMapping(badSubField);
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> merged.merge(badToMerge));
         assertEquals("mapper [field.sub2] cannot be changed from type [keyword] to [binary]", e.getMessage());
@@ -305,12 +372,14 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         // On update, copy_to is completely replaced
 
-        TestMapper toMerge = fromMapping("{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," +
-            "\"copy_to\":[\"foo\",\"bar\"]}");
+        TestMapper toMerge = fromMapping(
+            "{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," + "\"copy_to\":[\"foo\",\"bar\"]}"
+        );
         TestMapper merged = (TestMapper) mapper.merge(toMerge);
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," +
-                "\"copy_to\":[\"foo\",\"bar\"]}}",
-            Strings.toString(merged));
+        assertEquals(
+            "{\"field\":{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"," + "\"copy_to\":[\"foo\",\"bar\"]}}",
+            Strings.toString(merged)
+        );
 
         TestMapper removeCopyTo = fromMapping("{\"type\":\"test_mapper\",\"variable\":\"updated\",\"required\":\"value\"}");
         TestMapper noCopyTo = (TestMapper) merged.merge(removeCopyTo);
@@ -329,14 +398,14 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
     public void testObjectSerialization() throws IOException {
 
-        String mapping = "{\"_doc\":{" +
-            "\"properties\":{" +
-            "\"actual\":{\"type\":\"double\"}," +
-            "\"bucket_count\":{\"type\":\"long\"}," +
-            "\"bucket_influencers\":{\"type\":\"nested\",\"properties\":{" +
-            "\"anomaly_score\":{\"type\":\"double\"}," +
-            "\"bucket_span\":{\"type\":\"long\"}," +
-            "\"is_interim\":{\"type\":\"boolean\"}}}}}}";
+        String mapping = "{\"_doc\":{"
+            + "\"properties\":{"
+            + "\"actual\":{\"type\":\"double\"},"
+            + "\"bucket_count\":{\"type\":\"long\"},"
+            + "\"bucket_influencers\":{\"type\":\"nested\",\"properties\":{"
+            + "\"anomaly_score\":{\"type\":\"double\"},"
+            + "\"bucket_span\":{\"type\":\"long\"},"
+            + "\"is_interim\":{\"type\":\"boolean\"}}}}}}";
 
         MapperService mapperService = createMapperService(mapping);
         assertEquals(mapping, Strings.toString(mapperService.documentMapper().mapping()));
@@ -355,8 +424,11 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         String conflict = "{\"type\":\"test_mapper\",\"wrapper\":\"new value\",\"required\":\"value\"}";
         TestMapper toMerge = fromMapping(conflict);
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> mapper.merge(toMerge));
-        assertEquals("Mapper for [field] conflicts with existing mapper:\n" +
-            "\tCannot update parameter [wrapper] from [wrapper_wrapped value] to [wrapper_new value]", e.getMessage());
+        assertEquals(
+            "Mapper for [field] conflicts with existing mapper:\n"
+                + "\tCannot update parameter [wrapper] from [wrapper_wrapped value] to [wrapper_new value]",
+            e.getMessage()
+        );
     }
 
     // test validator
@@ -366,9 +438,17 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         assertEquals(10, mapper.intValue);
         assertEquals("{\"field\":" + mapping + "}", Strings.toString(mapper));
 
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class,
-            () -> fromMapping("{\"type\":\"test_mapper\",\"int_value\":60,\"required\":\"value\"}"));
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> fromMapping("{\"type\":\"test_mapper\",\"int_value\":60,\"required\":\"value\"}")
+        );
         assertEquals("Value of [n] cannot be greater than 50", e.getMessage());
+
+        IllegalArgumentException e2 = expectThrows(
+            IllegalArgumentException.class,
+            () -> fromMapping("{\"type\":\"test_mapper\",\"int_value\":-60,\"required\":\"value\"}")
+        );
+        assertEquals("Value of [n] cannot be less than 0", e2.getMessage());
     }
 
     // test deprecations
@@ -389,14 +469,11 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         assertNotNull(mapper);
         assertWarnings(
             "Parameter [some_unknown_parameter] is used in a dynamic template mapping and has no effect on type [test_mapper]. "
-            + "Usage will result in an error in future major versions and should be removed."
+                + "Usage will result in an error in future major versions and should be removed."
         );
         assertEquals("{\"field\":{\"type\":\"test_mapper\",\"required\":\"value\"}}", Strings.toString(mapper));
 
-        MapperParsingException ex = expectThrows(
-            MapperParsingException.class,
-            () -> fromMapping(mapping, Version.V_8_0_0, true)
-        );
+        MapperParsingException ex = expectThrows(MapperParsingException.class, () -> fromMapping(mapping, Version.V_8_0_0, true));
         assertEquals("unknown parameter [some_unknown_parameter] on mapper [field] of type [test_mapper]", ex.getMessage());
     }
 
@@ -419,8 +496,10 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         TestMapper original = mapper;
         TestMapper toMerge = fromMapping(mapping);
         e = expectThrows(IllegalArgumentException.class, () -> original.merge(toMerge));
-        assertEquals("Mapper for [field] conflicts with existing mapper:\n" +
-            "\tCannot update parameter [analyzer] from [default] to [_standard]", e.getMessage());
+        assertEquals(
+            "Mapper for [field] conflicts with existing mapper:\n" + "\tCannot update parameter [analyzer] from [default] to [_standard]",
+            e.getMessage()
+        );
     }
 
     public void testDeprecatedParameters() {
@@ -448,8 +527,8 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
         assertEquals("_standard", mapper.searchAnalyzer.name());
         assertEquals("{\"field\":" + mappingWithSA + "}", Strings.toString(mapper));
 
-        String mappingWithBoth = "{\"type\":\"test_mapper\",\"analyzer\":\"default\"," +
-            "\"search_analyzer\":\"_standard\",\"required\":\"value\"}";
+        String mappingWithBoth = "{\"type\":\"test_mapper\",\"analyzer\":\"default\","
+            + "\"search_analyzer\":\"_standard\",\"required\":\"value\"}";
         mapper = fromMapping(mappingWithBoth);
         assertEquals("default", mapper.analyzer.name());
         assertEquals("_standard", mapper.searchAnalyzer.name());
@@ -457,18 +536,21 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
 
         // we've configured things so that search_analyzer is only output when different from
         // analyzer, no matter what the value of `include_defaults` is
-        String mappingWithSame = "{\"type\":\"test_mapper\",\"analyzer\":\"default\"," +
-            "\"search_analyzer\":\"default\",\"required\":\"value\"}";
+        String mappingWithSame = "{\"type\":\"test_mapper\",\"analyzer\":\"default\","
+            + "\"search_analyzer\":\"default\",\"required\":\"value\"}";
         mapper = fromMapping(mappingWithSame);
         assertEquals("default", mapper.analyzer.name());
         assertEquals("default", mapper.searchAnalyzer.name());
         assertEquals("{\"field\":{\"type\":\"test_mapper\",\"analyzer\":\"default\",\"required\":\"value\"}}", Strings.toString(mapper));
 
-        assertEquals("{\"field\":{\"type\":\"test_mapper\",\"fixed\":true," +
-                "\"fixed2\":false,\"variable\":\"default\",\"index\":true," +
-                "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"default\"," +
-                "\"required\":\"value\",\"restricted\":\"foo\"}}",
-            toStringWithDefaults(mapper));
+        assertEquals(
+            "{\"field\":{\"type\":\"test_mapper\",\"fixed\":true,"
+                + "\"fixed2\":false,\"variable\":\"default\",\"index\":true,"
+                + "\"wrapper\":\"default\",\"int_value\":5,\"analyzer\":\"default\","
+                + "\"required\":\"value\",\"restricted\":\"foo\",\"enum_field\":\"name1\","
+                + "\"restricted_enum_field\":\"name1\"}}",
+            toStringWithDefaults(mapper)
+        );
     }
 
     public void testRequiredField() {
@@ -499,6 +581,47 @@ public class ParametrizedMapperTests extends MapperServiceTestCase {
             String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\"}";
             TestMapper mapper = fromMapping(mapping);
             assertEquals("foo", mapper.restricted);
+        }
+    }
+
+    public void testEnumField() {
+        {
+            String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\",\"enum_field\":\"baz\"}";
+            MapperParsingException e = expectThrows(MapperParsingException.class, () -> fromMapping(mapping));
+            assertEquals("Unknown value [baz] for field [enum_field] - accepted values are [name1, name2, name3]", e.getMessage());
+        }
+        {
+            String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\",\"enum_field\":\"name3\"}";
+            TestMapper mapper = fromMapping(mapping);
+            assertEquals(DummyEnumType.name3, mapper.enumField);
+        }
+        {
+            String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\"}";
+            TestMapper mapper = fromMapping(mapping);
+            assertEquals(DummyEnumType.name1, mapper.enumField);
+        }
+    }
+
+    public void testRestrictedEnumField() {
+        {
+            String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\",\"restricted_enum_field\":\"baz\"}";
+            MapperParsingException e = expectThrows(MapperParsingException.class, () -> fromMapping(mapping));
+            assertEquals("Unknown value [baz] for field [restricted_enum_field] - accepted values are [name1, name2]", e.getMessage());
+        }
+        {
+            String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\",\"restricted_enum_field\":\"name3\"}";
+            MapperParsingException e = expectThrows(MapperParsingException.class, () -> fromMapping(mapping));
+            assertEquals("Unknown value [name3] for field [restricted_enum_field] - accepted values are [name1, name2]", e.getMessage());
+        }
+        {
+            String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\",\"restricted_enum_field\":\"name2\"}";
+            TestMapper mapper = fromMapping(mapping);
+            assertEquals(DummyEnumType.name2, mapper.restrictedEnumField);
+        }
+        {
+            String mapping = "{\"type\":\"test_mapper\",\"required\":\"a\"}";
+            TestMapper mapper = fromMapping(mapping);
+            assertEquals(DummyEnumType.name1, mapper.restrictedEnumField);
         }
     }
 
